Applied code rules
git-svn-id: http://source.eict.vpdc/svn/labo/protocols/trunk@38542 0d108963-8a47-0410-809b-ebd9fb3b3407